fix: topBtn z-index, week page rwd

--- a/css/base.css
+++ b/css/base.css
@@ -190,6 +190,7 @@ body {
     border: 0;
     cursor: pointer;
     background-color: rgba(255, 255, 255, 0);
+    z-index: 2;
 }
 
 #top-btn img {
@@ -388,7 +389,7 @@ body {
     }
 
     .header-nav-link:hover,
-    .active {
+    .header-nav-content .active {
         font-weight: 700;
     }
 
